<resources>
    <string name="app_name">AndroidDataStorage</string>
    <string name="action_settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="SQL">SQLite</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="sview">SQLite View</string>
    <string name="pview">Preference Storage View</string>
    <string name="abookname">Android Book Name</string>
    <string name="abookauthor">Android Book Author</string>
    <string name="desc">Description</string>
    <string name="maxlimit">Max. 70 Characters</string>
    <string name="maxdesc">Maximum 255 characters only</string>
    <string name="title_activity_pref">Pref</string>
    <string name="title_activity_sqldb">Sqldb</string>
    <string name="save_success">Entries saved successfully!</string>
</resources>
