<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/sjsu_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sview"
            android:gravity="center_horizontal"
            android:paddingBottom="50dp"
            android:layout_marginLeft="80dp"
            android:textSize="@dimen/font_medium"
            android:typeface="serif"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/logo"
            />
        <TextView
            android:id="@+id/aname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abookname"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"/>

        <EditText
            android:id="@+id/anamevalue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/maxlimit"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@id/aname"
            android:inputType="textCapWords"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/aauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abookauthor"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"/>

        <EditText
            android:id="@+id/aauthorvalue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/maxlimit"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="180dp"
            android:layout_toRightOf="@id/aauthor"
            android:inputType="textCapWords"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:paddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="280dp"/>

        <EditText
            android:id="@+id/descvalue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/maxdesc"
            android:textSize="15dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="75dp"
            android:textColor="@color/black"
            android:layout_marginTop="260dp"
            android:inputType="textCapSentences"
            android:layout_toRightOf="@id/desc"
            android:background="@color/white"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/save"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:onClick="saveData"
            android:layout_marginLeft="90dp"
            android:background="@color/yellow"
            android:layout_marginTop="350dp"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Cancel"
            android:onClick="cancel"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/save"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="350dp"
            />

    </RelativeLayout>
</LinearLayout>