<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/sjsu_logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Android Data Storage Sample"
        android:gravity="center_horizontal"
        android:paddingBottom="50dp"
        android:textSize="@dimen/font_medium"
        android:typeface="serif"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/logo"
        />
    <Button
        android:id="@+id/pref"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/preferences"
        android:onClick="preferences"
        android:layout_marginLeft="40dp"
        android:background="@color/yellow"
        android:layout_marginTop="180dp"
        />

    <Button
        android:id="@+id/sql"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/SQL"
        android:onClick="sql"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/pref"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="40dp"
        />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_below="@id/sql"
        android:textColor="@color/black"
        />

</RelativeLayout>

    <Button
        android:id="@+id/close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/close"
        android:layout_marginTop="16dp"
        android:onClick="close"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        />
    </LinearLayout>
